<resources>
    <string name="app_name">Pendaftaran Magang Pothan</string>

    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="asal_kampus">Asal Kampus</string>
    <string name="nim">Nim</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="no_handpone">No Handphone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registrasi">Registrasi</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="email_address">Email Address</string>
    <string name="sudah_punya_akun">Sudah Memiliki Akun?</string>
    <string name="belum_punya_akun">Belum Memiliki Akun?</string>
    <string name="daftar">Daftar</string>
    <string name="back">&lt; Back</string>
    <string name="done">Done</string>
    <string name="nama_posisi">Nama Posisi</string>
    <string name="direktorat">Direktorat</string>
    <string name="apply">Apply</string>
    <string name="example_date">1 Januari 2025</string>
    <string name="example_periode">3 bulan</string>
    <string name="daftar_lowongan">Daftar Lowongan</string>
    <string name="status">Status</string>
    <string name="alamat">Alamat</string>
    <string name="dokumen">Dokumen</string>
    <string name="diterima">Diterima</string>
    <string name="ditolak">Ditolak</string>
    <string name="pending">Pending</string>
    <string name="tutup_pada">Tanggal tutup</string>
    <string name="cv">CV</string>
    <string name="surat_pengantar">Surat Pengantar</string>
    <string name="ktp">Kartu Tanda Penduduk</string>
    <string name="ktm">Kartu Tanda Mahasiswa</string>
    <string name="waktu">Waktu</string>
    <string name="durasi_magang">Durasi Magang</string>
    <string name="buat_lowongan">Buat Lowongan</string>
    <string name="verifikasi_dokumen">Verifikasi Dokumen</string>
    <string name="ajukan_verifikasi">Ajukan Verifikasi</string>
    <string name="verifikasi_registrasi_magang">Verifikasi Pendaftaran</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_view_desc">IMG_DESC</string>
    <string name="profile">Profile</string>
    <string name="lowongan">Lowongan</string>
    <string name="lihat_detail">Lihat Selengkapnya</string>
    <string name="example_email">example@gmail.com</string>
    <string name="example_phone">08xxxxxxxxx</string>
    <string name="divisi">Direktorat -</string>
    <string name="periode">Periode Magang</string>
    <string name="waktu_tutup">Waktu Tutup Registrasi</string>
    <string name="file">file.pdf</string>
    <string name="add_file">Add File</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="upload">Upolad</string>
    <string name="divisi_title">Direktorat</string>
    <string name="tambah_lowongan">Tambah Lowongan</string>
    <string name="error_invalid_input">Invalid Input, Try Again</string>
    <string name="error_unauthorized_401">Unauthorized, Try Agin</string>
    <string name="error_server_500">Server Error, Try Again Later</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="loading">Loading...</string>
    <string name="no_data">No Data</string>
    <string name="no_registration">Anda belum mendaftar</string>
    <string name="complete_docs">Lengkapi Dokumen</string>
</resources>