<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/botton_navigation">

    <fragment
        android:id="@+id/nav_job"
        android:name="com.example.capstone.ui.fragment.LowonganFragment"
        android:label="@string/daftar_lowongan"
        tools:layout="@layout/fragment_lowongan" />

    <fragment
        android:id="@+id/nav_status"
        android:name="com.example.capstone.ui.fragment.StatusFragment"
        android:label="@string/status"
        tools:layout="@layout/fragment_status" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.capstone.ui.fragment.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>