<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.UploadActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/img_view_desc"
        android:src="@drawable/logo_kemenhan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/logo"
        app:layout_constraintTop_toTopOf="@id/logo"
        app:layout_constraintBottom_toBottomOf="@id/logo"/>

    <TextView
        android:id="@+id/dokumen_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dokumen"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/nama_dokumen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file"
        android:textSize="20sp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/dokumen_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_file"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:icon="@drawable/icon_add_doc"
        app:iconTint="@color/blackTransparent"
        app:iconGravity="textStart"
        android:backgroundTint="@color/grey"
        android:text="@string/add_file"
        android:textColor="@color/blackTransparent"
        android:textSize="17sp"
        app:cornerRadius="10dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nama_dokumen" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_file"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/upload"
        android:textColor="@color/white"
        android:backgroundTint="@color/primary"
        android:textSize="17sp"
        app:cornerRadius="10dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_file" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/primary"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>