<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_job"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/nama_posisi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_posisi"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/divisi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/direktorat"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:paddingVertical="2dp"
            android:background="@drawable/shape_divisi"
            app:layout_constraintTop_toBottomOf="@id/nama_posisi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/nama_posisi"/>

        <ImageView
            android:id="@+id/icon_date"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/icon_date_white"
            android:contentDescription="@string/img_view_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divisi"/>

        <TextView
            android:id="@+id/periode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/example_periode"
            android:textSize="17sp"
            android:layout_marginStart="5dp"
            android:textColor="@color/whiteCream"
            app:layout_constraintTop_toTopOf="@id/icon_date"
            app:layout_constraintBottom_toBottomOf="@id/icon_date"
            app:layout_constraintStart_toEndOf="@id/icon_date"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/icon_close_date"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/icon_close_date"
            android:contentDescription="@string/img_view_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/periode"/>

        <TextView
            android:id="@+id/close_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/example_date"
            android:textSize="17sp"
            android:layout_marginStart="5dp"
            android:textColor="@color/whiteCream"
            app:layout_constraintTop_toTopOf="@id/icon_close_date"
            app:layout_constraintBottom_toBottomOf="@id/icon_close_date"
            app:layout_constraintStart_toEndOf="@id/icon_close_date"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/whiteCream"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/close_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/lihat_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lihat_detail"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/whiteCream"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
